style: fix buttons and spacing so groupings are clear

--- a/app/main.scss
+++ b/app/main.scss
@@ -4,6 +4,7 @@
 $primary-color: #f9f9fd;
 $nav-color: #FFFF33;
 $logo-color: #363689;
+$table-color: #c0c0ea;
 
 body {
 	background: $primary-color;
@@ -33,13 +34,17 @@ body {
 	font-size: 1.65em;
 }
 
-.center {
-	text-align: center;
+//not enough viz contrast with white text on red bgd
+.btn-danger {
+	color: #000;
 }
 
-.buttons {
-	float: left;
-	list-style: none;
+.btn-default {
+	background-color: #e5e5e5;
+}
+
+.center {
+	text-align: center;
 }
 
 .clear {
@@ -49,6 +54,56 @@ body {
 .hidden {
 	display: none;
 }
+
+.recipe {
+	width: 80%;
+	background-color: $table-color;
+	border: 1px solid grey;
+	border-radius: 3px;
+	margin: 5px auto;
+	padding-left: 10px;
+}
+
+.h5 {
+	//text-decoration: underline;
+	text-align: center;
+}
+
+//keeps the delete/edit buttons in same grouping with their recipe
+.padding {
+	padding-bottom: 40px;
+}
+
+.ingredientList {
+	width: 90%;
+	background-color: $primary-color;
+	border: 1px solid grey;
+	border-radius: 3px;
+	margin-bottom: 5px;
+	margin: 0 auto;
+}
+
+.ingredient {
+	border-bottom: 1px solid grey;
+	padding: 5px 10px;
+}
+
+.button-section {
+	padding-top: 8px;
+}
+
+.buttons {
+	float: left;
+	list-style: none;
+	margin-right: 5px;
+}
+
+.btn-add {
+	margin-left: 10%;
+}
+
+
+
 
 
 input {
